--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4"
   },
