--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "^4.19.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-navigation": "^2.5.5"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
@@ -27,6 +28,8 @@
     "preset": "react-native"
   },
   "rnpm": {
-    "assets": ["./src/assets"]
- }
+    "assets": [
+      "./src/assets"
+    ]
+  }
 }
