gradle edited for signing, release script added to yarn

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "build": "react-native bundle --dev false --platform android --entry-file index.js --bundle-output ./android/app/build/intermediates/assets/debug/index.android.bundle --assets-dest ./android/app/build/intermediates/res/merged/debug",
-    "apk": "cd ./android && gradlew assembleDebug"
+    "debug-apk": "cd ./android && gradlew assembleDebug",
+    "release-apk": "cd ./android && gradlew assembleRelease"
   },
   "dependencies": {
     "babel-eslint": "^8.2.3",
